--- a/home page/index.html
+++ b/home page/index.html
@@ -22,7 +22,9 @@
         <ul>
           <li>Home</li>
           <li>Breed</li>
-          <li>Gaits</li>
+          <li>
+            <a href="/gaits/index.html">Gaits</a>
+          </li>
           <li>History</li>
           <li>Contact</li>
         </ul>
@@ -32,5 +34,6 @@
         <h3>Discover with us and feel the nature</h3>
       </div>
     </div>
+    <script src="app.js"></script>
   </body>
 </html>
