--- a/gaits/index.html
+++ b/gaits/index.html
@@ -24,7 +24,7 @@
           <li>Gaits</li>
           <li>History</li>
           <li>Contact</li>
-          <li>Login</li>
+          <li><a href="/login/">Login</a></li>
           <li><div id="google_translate_element"></div></li>
         </ul>
       </header>
