--- a/home page/index.html
+++ b/home page/index.html
@@ -27,7 +27,7 @@
           </li>
           <li>History</li>
           <li>Contact</li>
-          <li>Login</li>
+          <li><a href="/login/">Login</a></li>
         </ul>
       </header>
       <div class="naslov">
