--- a/home page/index.html
+++ b/home page/index.html
@@ -27,7 +27,7 @@
           </li>
           <li>History</li>
           <li>Contact</li>
-          <li><a href="/login/">Login</a></li>
+          <li><a href="/login/" id="loginremove" >Login</a></li>
         </ul>
       </header>
       <div class="naslov">
@@ -35,6 +35,7 @@
         <h3>Discover with us and feel the nature</h3>
       </div>
     </div>
+    <div class="under">h</div>
     <script src="app.js"></script>
   </body>
 </html>
