--- a/home page/index.html
+++ b/home page/index.html
@@ -4,6 +4,10 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="style.css" />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"
+    />
     <title>Document</title>
   </head>
   <body>
@@ -21,13 +25,13 @@
         <h1>Iceland</h1>
         <ul>
           <li>Home</li>
-          <li>Breed</li>
+          <li>Breeding</li>
           <li>
             <a href="/gaits/index.html">Gaits</a>
           </li>
           <li>History</li>
           <li>Contact</li>
-          <li><a href="/login/" id="loginremove" >Login</a></li>
+          <li><a href="/login/" id="loginremove">Login</a></li>
         </ul>
       </header>
       <div class="naslov">
@@ -35,7 +39,97 @@
         <h3>Discover with us and feel the nature</h3>
       </div>
     </div>
-    <div class="under">h</div>
+    <div class="under">
+      <h1>BREEDING</h1>
+      <p>
+        The Icelandic horse has been bred selectively for a long time, which has
+        improved the breed, especially over the last few decades. The official
+        breeding goal of Icelandic horses is to produce a healthy, fertile, and
+        durable riding horse, a robust and yet elegant and versatile horse with
+        five excellent gaits. The conformation should offer optimal natural
+        balance, and the movements should be supple, high and ground covering in
+        all gaits, giving an elegant and powerful image.
+      </p>
+
+      <img
+        src="https://images.prismic.io/horsesoficeland/a329118c-3acc-4af8-90b2-7715065dfdce_header-1.jpg?ixlib=gatsbyFP&auto=compress%2Cformat&fit=max&w=1446&h=964"
+        alt=""
+      />
+
+      <button id="read">READ MORE</button>
+    </div>
+    <div class="under2">
+      <h1>GAITS</h1>
+      <p>
+        The Icelandic horse is what is called a gaited breed, they have, unlike
+        other breeds five gaits. Horses usually have three: Walk, Trot, and
+        Gallop. In addition to those gaits, the Icelandic horse has a smooth and
+        desirable gait Tölt and Flying pace. Tölt and Flying pace are the gaits
+        who make the Icelandic horse very special and desirable to ride.
+      </p>
+      <img
+        src="https://images.prismic.io/horsesoficeland/c3d5a3e3-d241-45b2-a93e-6c80a74c7aa7_GFR50673.jpg?auto=compress,format&rect=0,98,2160,1341&w=2160&h=1341"
+        alt=""
+      />
+      <button id="read2">READ MORE</button>
+    </div>
+    <div class="under3">
+      <h1>HISTORY</h1>
+      <p>
+        The Icelandic horse is a token of the Icelandic nation, its pride and
+        joy. Our modern day steeds are ancestors of the first Viking horses that
+        arrived with settlers between 860 and 935 CE. This horse has been with
+        us through the mini ice ages, Viking battles, earthquakes, and volcanic
+        eruptions.
+      </p>
+      <img
+        src="https://static.wixstatic.com/media/df9fb8_7e320fe015744dd8a90d91a5c06cfe69~mv2.jpg/v1/fill/w_980,h_653,al_c,q_85,usm_0.66_1.00_0.01,enc_auto/df9fb8_7e320fe015744dd8a90d91a5c06cfe69~mv2.jpg"
+        alt=""
+      />
+      <button id="read3">READ MORE</button>
+    </div>
+    <div class="wrapper">
+      <ul class="carousel">
+        <li class="card">
+          <div class="img"><img id="slika" src="" alt="" /></div>
+          <h2 id="naslov"></h2>
+          <span></span>
+        </li>
+        <li class="card">
+          <div class="img"><img id="slika" src="" alt="" /></div>
+          <h2 id="naslov"></h2>
+          <span></span>
+        </li>
+        <li class="card">
+          <div class="img"><img id="slika" src="" alt="" /></div>
+          <h2 id="naslov"></h2>
+          <span></span>
+        </li>
+        <li class="card">
+          <div class="img"><img id="slika" src="" alt="" /></div>
+          <h2 id="naslov"></h2>
+          <span></span>
+        </li>
+        <li class="card">
+          <div class="img"><img id="slika" src="" alt="" /></div>
+          <h2 id="naslov"></h2>
+          <span></span>
+        </li>
+        <li class="card">
+          <div class="img"><img id="slika" src="" alt="" /></div>
+          <h2 id="naslov"></h2>
+          <span></span>
+        </li>
+        <li class="card">
+          <div class="img"><img id="slika" src="" alt="" /></div>
+          <h2 id="naslov"></h2>
+          <span></span>
+        </li>
+      </ul>
+    </div>
+    <h1 class="colors">MANY DIFFERENT COLORS</h1>
+    <i id="left" class="fa fa-angle-left" aria-hidden="true"></i>
+    <i id="right" class="fa fa-angle-right" aria-hidden="true"></i>
     <script src="app.js"></script>
   </body>
 </html>
