--- a/gaits/index.html
+++ b/gaits/index.html
@@ -20,7 +20,7 @@
         <h1>Iceland</h1>
         <ul>
           <li><a href="/home page/index.html">Home</a></li>
-          <li>Breed</li>
+          <li>Breeding</li>
           <li>Gaits</li>
           <li>History</li>
           <li>Contact</li>
