--- a/home page/index.html
+++ b/home page/index.html
@@ -30,7 +30,7 @@
             <a href="/gaits/index.html">Gaits</a>
           </li>
           <li>History</li>
-          <li>Contact</li>
+          <li><a href="/contact/">Contact</a></li>
           <li><a href="/login/" id="loginremove">Login</a></li>
         </ul>
       </header>
@@ -71,7 +71,7 @@
         src="https://images.prismic.io/horsesoficeland/c3d5a3e3-d241-45b2-a93e-6c80a74c7aa7_GFR50673.jpg?auto=compress,format&rect=0,98,2160,1341&w=2160&h=1341"
         alt=""
       />
-      <button id="read2">READ MORE</button>
+      <button id="read2"><a href="/gaits/">READ MORE</a></button>
     </div>
     <div class="under3">
       <h1>HISTORY</h1>
