--- a/login/index.html
+++ b/login/index.html
@@ -22,7 +22,7 @@
         <h1>Iceland</h1>
         <ul>
           <li><a href="/home page/">Home</a></li>
-          <li>Breed</li>
+          <li>Breeding</li>
           <li>
             <a href="/gaits/index.html">Gaits</a>
           </li>
