--- a/home page/index.html
+++ b/home page/index.html
@@ -8,6 +8,7 @@
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"
     />
+
     <title>Document</title>
   </head>
   <body>
@@ -40,6 +41,15 @@
       </div>
     </div>
     <div class="under">
+      <div id="welcome" class="welcome">
+        <h1>Welcome</h1>
+        <p>
+          Discover more about these warm yet hardy creatures, what makes them so
+          remarkable, and why travelers flock from across the world to visit
+          them in Iceland, their natural habitat.
+        </p>
+      </div>
+      <i class="fa fa-angle-double-up" aria-hidden="true" id="ikonica"></i>
       <h1>BREEDING</h1>
       <p>
         The Icelandic horse has been bred selectively for a long time, which has
