--- a/gaits/index.html
+++ b/gaits/index.html
@@ -27,6 +27,10 @@
           <li><a href="/login/">Login</a></li>
           <li><div id="google_translate_element"></div></li>
         </ul>
+        <div class="nista"></div>
+        <div class="nista1"></div>
+        <div class="nista2"></div>
+        <div class="nista3"></div>
       </header>
       <div class="img">
         <img src="./tolt_1.webp" alt="" />
