--- a/home page/index.html
+++ b/home page/index.html
@@ -30,7 +30,7 @@
           <li>
             <a href="/gaits/index.html">Gaits</a>
           </li>
-          <li>History</li>
+          <li><a href="/history/">History</a></li>
           <li><a href="/contact/">Contact</a></li>
           <li><a href="/login/" id="loginremove">Login</a></li>
         </ul>
@@ -96,7 +96,7 @@
         src="https://static.wixstatic.com/media/df9fb8_7e320fe015744dd8a90d91a5c06cfe69~mv2.jpg/v1/fill/w_980,h_653,al_c,q_85,usm_0.66_1.00_0.01,enc_auto/df9fb8_7e320fe015744dd8a90d91a5c06cfe69~mv2.jpg"
         alt=""
       />
-      <button id="read3">READ MORE</button>
+      <button id="read3"><a href="/history/">READ MORE</a></button>
     </div>
     <div class="wrapper">
       <ul class="carousel">
