--- a/home page/index.html
+++ b/home page/index.html
@@ -26,7 +26,7 @@
         <h1>Iceland</h1>
         <ul>
           <li>Home</li>
-          <li>Breeding</li>
+          <li><a href="/breeding/">Breeding</a></li>
           <li>
             <a href="/gaits/index.html">Gaits</a>
           </li>
