--- a/breeding/index.html
+++ b/breeding/index.html
@@ -6,20 +6,24 @@
     <title>Document</title>
     <link rel="stylesheet" href="style.css" />
     <script src="app.js" defer></script>
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"
+    />
   </head>
   <body>
     <div class="main">
+      <i class="fa fa-angle-double-up" aria-hidden="true" id="ikonica"></i>
       <header class="header">
-        <h3>Horses of</h3>
-        <h1>Iceland</h1>
+        <h3><a href="/home page/">Horses of</a></h3>
+        <h1><a href="/home page/">Iceland</a></h1>
         <ul>
           <li><a href="/home page/index.html">Home</a></li>
           <li id="breed">Breeding</li>
           <li><a href="/gaits/">Gaits</a></li>
-          <li>History</li>
-          <li>Contact</li>
-          <li><a href="/login/">Login</a></li>
-          <li><div id="google_translate_element"></div></li>
+          <li><a href="/history/">History</a></li>
+          <li><a href="/contact/">Contact</a></li>
+          <li><a href="/login/" id="loginremove">Login</a></li>
         </ul>
       </header>
       <div class="img">
