--- a/contact/index.html
+++ b/contact/index.html
@@ -19,17 +19,17 @@
   <body>
     <div class="main">
       <header>
-        <h3>Horses of</h3>
-        <h1>Iceland</h1>
+        <h3><a href="/home page/">Horses of</a></h3>
+        <h1><a href="/home page/">Iceland</a></h1>
         <ul>
           <li><a href="/home page/">Home</a></li>
-          <li>Breeding</li>
+          <li><a href="/breeding/">Breeding</a></li>
           <li>
             <a href="/gaits/index.html">Gaits</a>
           </li>
-          <li>History</li>
+          <li><a href="/history/">History</a></li>
           <li>Contact</li>
-          <li><a href="/login/">Login</a></li>
+          <li><a href="/login/" id="loginremove">Login</a></li>
         </ul>
       </header>
       <div class="content">
