--- a/gaits/index.html
+++ b/gaits/index.html
@@ -20,12 +20,11 @@
         <h1>Iceland</h1>
         <ul>
           <li><a href="/home page/index.html">Home</a></li>
-          <li>Breeding</li>
-          <li>Gaits</li>
-          <li>History</li>
-          <li>Contact</li>
-          <li><a href="/login/">Login</a></li>
-          <li><div id="google_translate_element"></div></li>
+          <li><a href="/breeding/">Breeding</a></li>
+          <li id="gaits">Gaits</li>
+          <li><a href="/history/">History</a></li>
+          <li><a href="/contact/">Contact</a></li>
+          <li><a id="loginremove" href="/login/">Login</a></li>
         </ul>
         <div class="nista"></div>
         <div class="nista1"></div>
