--- a/history/index.html
+++ b/history/index.html
@@ -14,11 +14,11 @@
         <h1><a href="/home page/">Iceland</a></h1>
         <ul>
           <li><a href="/home page/">Home</a></li>
-          <li>Breeding</li>
+          <li><a href="/breeding/">Breeding</a></li>
           <li>
             <a href="/gaits/index.html">Gaits</a>
           </li>
-          <li>History</li>
+          <li><a href="/history/">History</a></li>
           <li><a href="/contact/">Contact</a></li>
           <li><a href="/login/" id="loginremove">Login</a></li>
         </ul>
