--- a/home page/index.html
+++ b/home page/index.html
@@ -22,8 +22,8 @@
         class="video"
       ></video>
       <header>
-        <h3>Horses of</h3>
-        <h1>Iceland</h1>
+        <h3><a href="/home page/">Horses of</a></h3>
+        <h1><a href="/home page/">Iceland</a></h1>
         <ul>
           <li>Home</li>
           <li><a href="/breeding/">Breeding</a></li>
