--- a/login/index.html
+++ b/login/index.html
@@ -22,12 +22,12 @@
         <h1>Iceland</h1>
         <ul>
           <li><a href="/home page/">Home</a></li>
-          <li>Breeding</li>
+          <li><a href="/breeding/">Breeding</a></li>
           <li>
             <a href="/gaits/index.html">Gaits</a>
           </li>
-          <li>History</li>
-          <li>Contact</li>
+          <li><a href="/history/">History</a></li>
+          <li><a href="/contact/">Contact</a></li>
           <li><a href="/login/">Login</a></li>
         </ul>
       </header>
