--- a/homePage/index.html
+++ b/homePage/index.html
@@ -22,8 +22,8 @@
         class="video"
       ></video>
       <header>
-        <h3><a href="/home page/">Horses of</a></h3>
-        <h1><a href="/home page/">Iceland</a></h1>
+        <h3><a href="/homePage/">Horses of</a></h3>
+        <h1><a href="/homePage/">Iceland</a></h1>
         <ul>
           <li>Home</li>
           <li><a href="/breeding/">Breeding</a></li>
@@ -66,7 +66,7 @@
         alt=""
       />
 
-      <button id="read">READ MORE</button>
+      <button id="read"><a href="/breeding/">READ MORE</a></button>
     </div>
     <div class="under2">
       <h1>GAITS</h1>
