--- a/breeding/index.html
+++ b/breeding/index.html
@@ -15,10 +15,10 @@
     <div class="main">
       <i class="fa fa-angle-double-up" aria-hidden="true" id="ikonica"></i>
       <header class="header">
-        <h3><a href="/home page/">Horses of</a></h3>
-        <h1><a href="/home page/">Iceland</a></h1>
+        <h3><a href="/homePage/">Horses of</a></h3>
+        <h1><a href="/homePage/">Iceland</a></h1>
         <ul>
-          <li><a href="/home page/index.html">Home</a></li>
+          <li><a href="/homePage/index.html">Home</a></li>
           <li id="breed">Breeding</li>
           <li><a href="/gaits/">Gaits</a></li>
           <li><a href="/history/">History</a></li>
