--- a/history/index.html
+++ b/history/index.html
@@ -10,10 +10,10 @@
   <body>
     <div class="main">
       <header>
-        <h3><a href="/home page/">Horses of</a></h3>
-        <h1><a href="/home page/">Iceland</a></h1>
+        <h3><a href="/homePage/">Horses of</a></h3>
+        <h1><a href="/homePage/">Iceland</a></h1>
         <ul>
-          <li><a href="/home page/">Home</a></li>
+          <li><a href="/homePage/">Home</a></li>
           <li><a href="/breeding/">Breeding</a></li>
           <li>
             <a href="/gaits/index.html">Gaits</a>
