--- a/homePage/index.html
+++ b/homePage/index.html
@@ -25,7 +25,7 @@
         <h3><a href="/homePage/">Horses of</a></h3>
         <h1><a href="/homePage/">Iceland</a></h1>
         <ul>
-          <li>Home</li>
+          <li><a href="/homePage/">Home</a></li>
           <li><a href="/breeding/">Breeding</a></li>
           <li>
             <a href="/gaits/index.html">Gaits</a>
